Create the structure of the text editor

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <title>Text Editor</title>
   </head>
   <body>
-    <h1>Text Editor</h1>
+    <div class="header"></div>
+    <div class="toolbar"></div>
+    <div class="text-box" contenteditable="true"></div>
   </body>
-  
+
   <script src="js/app.js"></script>
 </html>
