--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <div class="header"></div>
     <div class="toolbar"></div>
     <div class="text-box" contenteditable="true"></div>
+    <footer>          
+      <p>© Copyright 2021. <strong>"TBM85"</strong><br /> All rights reserved</p> 
+    </footer>
   </body>
 
   <script src="js/app.js"></script>
